@@ -149,16 +149,6 @@ AC_DEFUN([AS_VAR_PREPEND], [$1=$2${$1}])
 ])dnl
 
 
-dnl AS_VAR_APPEND
-dnl -------------
-dnl
-dnl this was added in autoconf-2.64+
-dnl
-m4_ifndef([AS_VAR_APPEND],[dnl
-AC_DEFUN([AS_VAR_APPEND], [$1=${$1}$2])
-])dnl
-
-
 dnl m4_ifnblank
 dnl -----------
 dnl
